<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/general_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/notif_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
        app:title="Notifications"/>

    <LinearLayout
        android:id="@+id/notif_global_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/notif_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_query_term" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/notif_two_columns_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:background="@drawable/bottom_border">

            <FrameLayout
                android:id="@+id/notif_left_column_frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <LinearLayout
                    android:id="@+id/notif_left_column_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/notif_checkBox_arts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/cb_arts"
                        android:onClick="onCheckboxClicked"
                        />

                    <CheckBox
                        android:id="@+id/notif_checkBox_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/cb_business"
                        android:onClick="onCheckboxClicked"
                        />

                    <CheckBox
                        android:id="@+id/notif_checkBox_entrepeneurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/cb_entrepreneurs"
                        android:onClick="onCheckboxClicked"
                        />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/notif_right_column_frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <LinearLayout
                    android:id="@+id/notif_right_column_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/notif_checkBox_politics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/cb_politics"
                        android:onClick="onCheckboxClicked"
                        />

                    <CheckBox
                        android:id="@+id/notif_checkBox_sports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/cb_sports"
                        android:onClick="onCheckboxClicked"
                        />

                    <CheckBox
                        android:id="@+id/notif_checkBox_travel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/cb_travel"
                        android:onClick="onCheckboxClicked"
                        />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout> <!-- two columns -->

        <Switch
            android:id="@+id/notif_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="@string/enable_notifications"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nothing"/>

    </LinearLayout> <!-- global (after toolbar) -->

</LinearLayout> <!-- general -->


