<resources>
    <string name="app_name">My News</string>

    <string name="go_back" >Go back</string>

    <!-- MAIN ACTIVITY STRINGS -->

    <string name="top_stories_tag"> TOP STORIES </string>
    <string name="most_popular_tag"> MOST POPULAR </string>
    <string name="business_tag"> BUSINESS </string>
...
    <string name="main_notification_channel_name">Notification Channel Name</string>

    <string name="notification_app"> My News </string>
    <string name="notification_title">New Articles available!</string>
    <string name="notification_message">Tap to read Articles</string>
    <string name="notification_image_for_mynews">Image for MyNews</string>
    <string name="notification_no_available_articles">There are not available articles</string>
    <string name="notifications_not_enabled">Notifications are not enabled</string>

    <!-- FOUND ARTICLES LAYOUT -->

    <string name="found_articles_title">Found Articles</string>
    <string name="an_error_has_occurred">An error has occurred…</string>
...
