<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_notifications_button"
        android:icon="@drawable/ic_event_note_white_24dp"
        app:showAsAction="ifRoom"
        android:title="Event Note" />

</menu>